tests/paczka1/small_fuzzy/75300279.err
Error in line 1: Z8Zme4g01it A180 83,5
Error in line 10: d2O2FwLS S257 52,8
Error in line 8: Q8mChqHl A180 86,1
